--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
