--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
