--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
     "@mui/x-date-pickers": "^5.0.0-alpha.6",
+    "@reduxjs/toolkit": "^2.11.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
